cmd/sphinx-proxy/k8s/01-sphinx-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sphinx-proxy
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sphinx-proxy
  template:
    metadata:
      labels:
        app: sphinx-proxy
    spec:
      containers:
      - name: sphinx-proxy
        image: uhub.service.ucloud.cn/entropypool/sphinx-proxy:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: sphinx-proxy
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
spec:
  ports:
  - name: http
    port: 50000
    targetPort: 50000
  - name: grpc
    port: 50001
    targetPort: 50001
  selector:
    app: sphinx-proxy
