cmd/sphinx-proxy/k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sphinx-proxy-npool-top-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: sphinx-proxy-npool
    k8s.kuboard.cn/workload: sphinx-proxy-npool
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure

spec:
  rules:
    - host: sphinx.proxy.api.npool.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sphinx-proxy
                port:
                  number: 50001

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sphinx-proxy-xpool-top-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: sphinx-proxy-xpool
    k8s.kuboard.cn/workload: sphinx-proxy-xpool
    kubernetes.io/ingress.class: "traefik-internet"

spec:
  rules:
    - host: sphinx.proxy.api.xpool.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sphinx-proxy
                port:
                  number: 50001
